<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/botonInicioCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonInicioCerrarSesion"
            android:layout_margin="10dp"
            android:onClick="inicioCerrarSesion"/>

        <TextView
            android:id="@+id/textoNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textStyle="italic"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MensajeInicial"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="48sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton2048"
        android:layout_margin="30dp"
        android:onClick="jugar2048"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonGiravoltorb"
        android:layout_margin="30dp"
        android:onClick="jugarGiravoltorb"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonPuntuaciones"
        android:layout_margin="30dp"
        android:onClick="verPuntuaciones"/>
</LinearLayout>